[package]
name = "binja_coolsigmaker"
version = "0.1.6"
authors = ["unknowntrojan"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local Development
# binaryninja = { path = "../binaryninja-api/rust" }

tracing = "0.1"
clipboard = "0.5"
rayon = "1.11"
iced-x86 = "1.17.0"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["std"] }
serde_json = "1"
thiserror = "2 "
# coolfindpattern = "0.1.7"
binary-search = "0.1.3"


# Dev
# binaryninja = { git = "https://github.com/Vector35/binaryninja-api", branch = "dev" }
# Stable
binaryninja = { git = "https://github.com/Vector35/binaryninja-api", tag = "stable/5.3.9434" }
